--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,50 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>Museo Sívori - Contador de personas</title>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js">
+    </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js">
+    </script>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" id="bootstrap-css" rel="stylesheet">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js">
+    </script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js">
+    </script>
   </head>
   <body>
-    <h1>Contador de personas entrada Museo Sívori</h1>
-    <img src="{{ url_for('video_feed') }}">
+    <script>
+      function reset(params) {
+        jsonData = JSON.stringify({'reset': true})
+        $.ajax({
+            url: "/index",
+            type: "POST",
+            cache: false,
+            contentType: 'application/json',
+            processType: false,
+            processData: false,
+            data: jsonData,
+        }).done(function(response){
+          console.log(response)
+        });
+      }
+    </script>
+    <div>
+      <h1>Contador de personas entrada Museo Sívori</h1>
+    </div>
+    <div>
+      <img src="{{ url_for('video_feed') }}">
+    </div>
+    <div class="mt-3">
+      <button class="btn btn-success" onclick="reset()" type="button">
+        Reset contador
+      </button>
+    </div>
   </body>
 </html>
