--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,20 @@
     </script>
   </head>
   <body>
+    <style>
+      .video-container {
+        display: flex;
+        flex-direction: row;
+      }
+      .datos-container-columns {
+        display: flex;
+        flex-direction: column;
+      }
+      .datos-container-rows {
+        display: flex;
+        flex-direction: row;
+      }
+    </style>
     <script>
       function reset(params) {
         jsonData = JSON.stringify({'reset': true})
@@ -34,12 +48,43 @@
           console.log(response)
         });
       }
+
+      function video_data(params) {
+        jsonData = JSON.stringify({'reset': true})
+        $.ajax({
+            url: "/video_data",
+            type: "POST",
+            cache: false,
+            contentType: 'application/json',
+            processType: false,
+            processData: false,
+            data: jsonData,
+        }).done(function(response){
+          console.log(response)
+          htmlPersonasDentro = '<div class="datos-container-rows">' + 
+            '<div class="mr-3">Cantidad de personas dentro</div><div>CANTIDAD_PERSONAS_DENTRO</div></div>'.
+            replace('CANTIDAD_PERSONAS_DENTRO', response.cantidad_personas_dentro)
+          htmlPersonasAfuera = '<div class="datos-container-rows">' + 
+            '<div class="mr-3">Cantidad de personas afuera</div><div>CANTIDAD_PERSONAS_AFUERA</div></div>'.
+            replace('CANTIDAD_PERSONAS_AFUERA', response.cantidad_personas_afuera)
+          htmlContenido = htmlPersonasDentro + htmlPersonasAfuera
+          document.getElementById("datos-contador").innerHTML = htmlContenido
+        });
+      }
+
+      //$(document).ready( function() {
+      setInterval(video_data,1000);
+      //});
     </script>
     <div>
       <h1>Contador de personas entrada Museo Sívori</h1>
     </div>
-    <div>
-      <img src="{{ url_for('video_feed') }}">
+    <div class="video-container">
+      <div class="datos-container-columns">
+        <img src="{{ url_for('video_feed') }}">
+      </div>
+      <div class="datos-container-columns" id="datos-contador">
+      </div>
     </div>
     <div class="mt-3">
       <button class="btn btn-success" onclick="reset()" type="button">
